# CMakeOpenGL

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindVulkan.cmake  shared.cmake
data/shader/: simple_triangle.frag
glad/include/glad/: glad.h
glad/src/: glad.c
include/: config.h  rslib.h  shader.h  texture.h
shader/: simple_triangle.vert
src/: OpenGLScratch.cpp  main.cpp  rslib.cpp  shader.cpp  texture.cpp
